tests/baselines/reference/tsxAttributeResolution9.errors.txt
tests/cases/conformance/jsx/file.tsx(9,14): error TS2326: Types of property 'foo' are incompatible.
  Type 'number' is not assignable to type 'string'.


==== tests/cases/conformance/jsx/react.d.ts (0 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
    	}
    	interface ElementAttributesProperty {
    		props;
    	}
    }
    
    interface Props {  
      foo: string;
    }
    
==== tests/cases/conformance/jsx/file.tsx (1 errors) ====
    export class MyComponent {  
      render() {
      }
    
      props: { foo: string; }
    }
    
    <MyComponent foo="bar" />; // ok  
    <MyComponent foo={0} />; // should be an error
                 ~~~~~~~
!!! error TS2326: Types of property 'foo' are incompatible.
!!! error TS2326:   Type 'number' is not assignable to type 'string'.
    